maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      left()
      ^PledgeMaze:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      turn+=1
      ^PledgeMaze:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      if ( ! isFacingWall()) {
      ^